2017-10-16  Ben Elliston  <bje@gnu.org>

	* NEWS: Start a new section for the next release.
	* configure.ac (AC_INIT): Update version number.
	* configure: Regenerate.
	* runtest.exp (frame_version): Update version number.
	* doc/dejagnu.texi: Likewise.
	* doc/runtest.1: Update datestamp.

2017-10-16  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to version 2017-09-26.
	* config.sub: Likewise.

2017-09-13  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (open_logs): Set XML version to 1.1.
	(xml_tag): Skip valid whitespace chars (0x9, 0xA, 0xD). Include
	missing 'x' in escape sequence.

2017-08-29  Ben Elliston  <bje@gnu.org>

	Revert these changes:

	2016-04-25  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/utils.test: Remove unsetenv test.

	2016-04-24  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (unsetenv): Remove proc.
	* doc/dejagnu.texi: Update documentation.
	* NEWS: Update.

2017-08-19  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (xml_tag): Escape all of the non-printable
	control characters (ASCII codes 1 to 31 inclusive).

2017-08-18  Tom Tromey  <tom@tromey.com>

	* runtest.exp: Fix --directory matching.

2017-08-15  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (xml_tag): New proc.
	(log_summary): Use it.
	(record_test): Likewise.

2017-08-15  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (open_logs): Set .xml filename correctly.
	* runtest.exp: Remove xml_file_name var.
	(usage): Update --xml option to not take an argument.
	(load_tool_init): Likewise.
	* doc/dejagnu.texi (Invoking runtest): Update documentation.
	* doc/runtest.1: Likewise.

2017-08-01  Ben Elliston  <bje@gnu.org>

	* runtest.exp (usage): Improve --strace message.

2017-08-01  Ben Elliston  <bje@gnu.org>

	* runtest.exp (usage): --reboot doesn't take a 'name' parameter.

2017-06-04  Ben Elliston  <bje@gnu.org>

	* lib/target.exp (push_target): Remove unnecessary global command.
	* testsuite/runtest.all/target.test: Overhaul tests.
